# bolero

./: .gitignore  .gitlab-ci.yml  .pylintrc  README.md  app.py  config.py  package-lock.json  pyproject.toml  settings.yaml
bolero/cli/: db.py  user.py
bolero/models/: __init__.py
bolero/models/bolero/: __init__.py
bolero/server/: __init__.py
client-web/: .env.development  .env.production  README.md  package-lock.json  package.json  vite.config.js
client-web/src/: App.vue  main.js
client-web/src/api/: auteur.js  config.js  editeur.js  http.js  login.js  ouvrage.js  recension.js  relation.js  revue.js
client-web/src/components/: ConfirmDeleteModal.vue  LangageSelector.vue
client-web/src/composables/: searchFieldsConfig.js  useErrorHandler.js  useNavigation.js  useNotification.js  useSearchFields.js  useSearchParams.js
client-web/src/constants/: langues.js  utils.js
client-web/src/router/: router.js
collections/: authentification.bru  bruno.json
collections/author/: delete_author.bru  get_author.bru  post_author.bru  update_author.bru
collections/book/: create_book.bru  get_book.bru  update_book.bru
collections/environments/: prod.bru
collections/relation/: create_relation.bru
collections/review/: create_review.bru  get_review.bru  update_review.bru
core/: __init__.py
core/models/: README.md  __init__.py  core.py  mixins.py  utils.py
core/server/: README.md  __init__.py  api.py  error.py  flask_littledb.py  json_encoder.py  views.py
core/services/: click.py  error.py  jsonlib.py  loggers.py  secret.py  tools_belt.py
(+43 files in other folders)
